<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/categories"
            android:title="@string/categories"
            android:icon="@drawable/ic_categories"/>
        <item
            android:id="@+id/settings"
            android:title="@string/cart"
            android:icon="@drawable/ic_basket"/>
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/ic_search"/>
        <item
            android:id="@+id/person"
            android:title="@string/account"
            android:icon="@drawable/ic_person"/>
</menu>
