<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:accessibilityPaneTitle="@string/forgot_password"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".vendor.VendorForgotPasswordActivity">

    <ImageView
        android:layout_width="159dp"
        android:layout_height="173dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Vendor_forgot_password_title"
        android:layout_below="@id/logo"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="left"
        android:layout_centerHorizontal="true"
        android:id="@+id/header"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_sub_title"
        android:textColor="@android:color/black"
        android:layout_below="@id/header"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/sub_title"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vendor_forgot_password_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/sub_title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vendor_forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:hint="@string/signup_email"
            android:autofillHints="email" />

    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vendor_forgot_password_layout_email"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="sendEmail"
            android:text="@string/send_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/forgot_password_send_email"
            android:layout_toLeftOf="@id/forgot_password_send_email"
            android:onClick="cancel"
            android:text="@string/cancel" />

    </RelativeLayout>

</RelativeLayout>