<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:accessibilityPaneTitle="@string/registerPassword"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".customer.RegisterPasswordActivity">

    <ImageView
        android:layout_width="159dp"
        android:layout_height="173dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerPassword"
        android:layout_below="@id/logo"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorAccent"

        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="left"
        android:layout_centerHorizontal="true"
        android:id="@+id/header"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_sub_title"
        android:textColor="@android:color/black"
        android:layout_below="@id/header"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/sub_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/sub_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/input_layout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirm"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/passwordConfirmHint"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/nextPage"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>